--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
                 </td>
                 <td>
                     <h1>Georg Stockhammer</h1>
-                    <p><em>I want to become a <strong><a href="https://youtu.be/NHquaDS6XQ0">Software Developer</a></strong>
-                     werden!</em><br>
-                    </p><br>
+                    <p><em>I want to become a <strong><a href="https://youtu.be/NHquaDS6XQ0">Software Developer</a></strong></em></p>
+                    <br>
                     <p>Since i was little i like playing video games. 
                         I went to a technical school. But later choose
                         a different path. I am happy about it, because i
