--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title> 🚂 Georg's personal Site</title>
+        <title> Georg Stockhammer personal Site</title>
     </head>
     <body>
         <table cellspacing="30">
             <tr>
                 <td>
-                    <img src="/img/2-modified.png" alt="Georg's Profile Picture" srcset="/img/2-modified.png 3x">
+                    <img src="/img/1.png" alt="Georg's Profile Picture" srcset="/img/1.png 3x">
                 </td>
                 <td>
                     <h1>Georg Stockhammer</h1>
@@ -27,13 +27,18 @@
         <hr>
         <h3>Education</h3>
         <ul>
-            <li><a href="https://www.tgm.ac.at">TGM</a> <ul>
+            <li><a href="https://de.wikipedia.org/wiki/Technologisches_Gewerbemuseum">TGM</a>
+                <ul>
                     <li>Matura</li>
                 </ul> 
             </li>
-            <li><a href="https://www.tuwien.at">TU Wien</a>, keinen Abschluß</li>
-            <li><a href="https://kphvie.ac.at/home.html"> KPH Wien</a>, keinen Abschluß</li>
-            <li><a href="https://sob.caritas-wien.at">SOB Wien</a></li>
+            <li><a href="https://www.tuwien.at">TU Wien</a>, no diploma</li>
+            <li><a href="https://kphvie.ac.at/home.html"> KPH Wien</a>, no diploma</li>
+            <li><a href="https://sob.caritas-wien.at">SOB Wien</a>
+                <ul>
+                    <li>"Fachsozial Betreuer BB"</li>
+                </ul> 
+            </li>
         </ul>
         <hr>
         <table cellspacing="10">
