--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <table cellspacing="30">
             <tr>
                 <td>
-                    <img src="/img/1.png" alt="Georg's Profile Picture" srcset="/img/1.png 3x">
+                    <img src="img/1.png" alt="Georg's Profile Picture" srcset="img/1.png 3x">
                 </td>
                 <td>
                     <h1>Georg Stockhammer</h1>
                     <p><em>I want to become a <strong><a href="https://youtu.be/NHquaDS6XQ0">Software Developer</a></strong></em></p>
                     <br>
-                    <p>Since i was little i like playing video games. 
+                    <p>Since i was little i liked playing video games. 
                         I went to a technical school. But later choose
                         a different path. I am happy about it, because i
                         found my wife and we got our son.
@@ -110,7 +110,7 @@
             </tr>            
         </table>
         <hr>
-        <h3><strong><a href="hobbies.html">My Hobbies</a></strong></h3><br>
+        <h3><strong><a href="hobbies.html">My Hobbies</a></strong></h3><hr>
         <h3><strong><a href="contact.html">contact me</a></strong></h3>
         
 
