--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form action=""></form>
-    <strong><a href="https://twitter.com/thekinggeorg"><img src="/img/twitter.png" srcset="/img/twitter.png 30x">Me on twitter</a>
+    <strong><a href="https://twitter.com/thekinggeorg"><img src="img/twitter.png" srcset="img/twitter.png 30x">Me on twitter</a>
     </strong><br>
     <strong>@ <a href="mailto:georgstockhammer@gmail.com">My email</a></strong>
     <hr>
